[MOSIP-9993] Replication factor added for many modules.

--- a/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
@@ -29,6 +29,8 @@ services:
     servicePort: 80
     ingressPath: /idrepository/v1/identity 
     healthUrl: /idrepository/v1/identity/actuator/health
+    podconfig: {{ podconfig.idrepo.identity | to_yaml }}
+
   vid: 
     serviceName: {{ versions.services.idrepo.vid.keys()[0] }} 
     dockerImage: {{ versions.services.idrepo.vid.values()[0] }}
@@ -36,6 +38,8 @@ services:
     servicePort: 80
     ingressPath: /idrepository/v1/vid
     healthUrl: /idrepository/v1/actuator/health # TODO: Check this url. It does not have /vid
+    podconfig: {{ podconfig.idrepo.vid | to_yaml }}
+
   bioextractor:
     serviceName: {{ versions.services.idrepo.bioextractor.keys()[0] }}
     dockerImage: {{ versions.services.idrepo.bioextractor.values()[0] }}
@@ -43,6 +47,8 @@ services:
     servicePort: 80
     ingressPath: /v1/bioextractor/mock
     healthUrl: /v1/bioextractor/mock/actuator/health
+    podconfig: {{ podconfig.idrepo.bioextractor | to_yaml }}
+
   credentialrequest:
     serviceName: {{ versions.services.idrepo.credentialreq.keys()[0] }}
     dockerImage: {{ versions.services.idrepo.credentialreq.values()[0] }}
@@ -50,6 +56,8 @@ services:
     servicePort: 80
     ingressPath: /v1/credentialrequest
     healthUrl: /v1/credentialrequest/actuator/health
+    podconfig: {{ podconfig.idrepo.credentialreq | to_yaml }}
+
   credentialservice:
     serviceName: {{ versions.services.idrepo.credentialservice.keys()[0] }}
     dockerImage: {{ versions.services.idrepo.credentialservice.values()[0] }}
@@ -57,6 +65,7 @@ services:
     servicePort: 80
     ingressPath: /v1/credentialservice
     healthUrl: /v1/credentialservice/actuator/health
+    podconfig: {{ podconfig.idrepo.credentialservice | to_yaml }}
 
 generators:
   salt:  
