--- a/deployment/sandbox-v2/helm/charts/datashare/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/datashare/values.template.j2
@@ -23,3 +23,4 @@ services:
     servicePort: 80
     ingressPath: /v1/datashare
     healthUrl: /v1/datashare/actuator/health
+    podconfig: {{ podconfig.datashare.service | to_yaml }}
