--- a/deployment/sandbox-v2/helm/charts/ida/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/ida/values.template.j2
@@ -28,6 +28,8 @@ services:
     hsmUrl: tcp://softhsm-ida:80   # Should match with softhsm chart service name and port (see, ida.yml and role/softhsm)
     ingressPath: /idauthentication/v1/auth
     healthUrl: /idauthentication/v1/auth/actuator/health
+    podconfig: {{ podconfig.ida.auth | to_yaml }}
+
   internal: 
     serviceName: {{ versions.services.ida.internal.keys()[0] }} 
     dockerImage: {{ versions.services.ida.internal.values()[0] }}
@@ -36,6 +38,8 @@ services:
     hsmUrl: tcp://softhsm-ida:80   
     ingressPath: /idauthentication/v1/internal
     healthUrl: /idauthentication/v1/internal/actuator/health
+    podconfig: {{ podconfig.ida.internal | to_yaml }}
+
   kyc: 
     serviceName: {{ versions.services.ida.kyc.keys()[0] }} 
     dockerImage: {{ versions.services.ida.kyc.values()[0] }}
@@ -44,6 +48,8 @@ services:
     hsmUrl: tcp://softhsm-ida:80   
     ingressPath: /idauthentication/v1/kyc
     healthUrl: /idauthentication/v1/kyc/actuator/health
+    podconfig: {{ podconfig.ida.kyc | to_yaml }}
+
   otp: 
     serviceName: {{ versions.services.ida.otp.keys()[0] }} 
     dockerImage: {{ versions.services.ida.otp.values()[0] }}
@@ -52,6 +58,7 @@ services:
     hsmUrl: tcp://softhsm-ida:80   
     ingressPath: /idauthentication/v1/otp
     healthUrl: /idauthentication/v1/otp/actuator/health
+    podconfig: {{ podconfig.ida.kyc | to_yaml }}
 
 generators:
   keygen:  
