--- a/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
@@ -9,6 +9,8 @@ probe:
 ingress:
    namespace: default
 artifactoryUrl: {{ artifactory_url }} 
+iamAdapterUrl: {{ iam_adapter_url }}
+sitePublicUrl: {{ site.sandbox_public_url }}
 imagePullPolicy: Always 
 isGlowroot: {{ is_glowroot }}
 
