--- a/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
@@ -7,6 +7,7 @@ ingress:
    namespace: default
 artifactoryUrl: {{ artifactory_url }} 
 sitePublicUrl: {{ site.sandbox_public_url }}
+iamAdapterUrl: {{ iam_adapter_url }}
 probe:
   initialDelay: 60  # Seconds
   period: 30 # Seconds
