--- a/deployment/sandbox-v2/helm/charts/pms/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/pms/values.template.j2
@@ -6,6 +6,8 @@ configServerUrl: {{ config_server.internal_url }}
 ingress:
    namespace: default
 artifactoryUrl: {{ artifactory_url }} 
+sitePublicUrl: {{ site.sandbox_public_url }}
+iamAdapterUrl: {{ iam_adapter_url }}
 probe:
   initialDelay: 30  # Seconds
   period: 30 # Seconds
