--- a/deployment/sandbox-v2/helm/charts/ida/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/ida/values.template.j2
@@ -30,6 +30,7 @@ services:
     ingressPath: /idauthentication/v1/auth
     healthUrl: /idauthentication/v1/auth/actuator/health
     podconfig: {{ podconfig.ida.auth | to_yaml }}
+    hsmClientZipPath: {{ hsm_client_zip_path }}
 
   internal: 
     serviceName: {{ versions.services.ida.internal.keys()[0] }} 
@@ -40,6 +41,7 @@ services:
     ingressPath: /idauthentication/v1/internal
     healthUrl: /idauthentication/v1/internal/actuator/health
     podconfig: {{ podconfig.ida.internal | to_yaml }}
+    hsmClientZipPath: {{ hsm_client_zip_path }}
 
   kyc: 
     serviceName: {{ versions.services.ida.kyc.keys()[0] }} 
@@ -50,6 +52,7 @@ services:
     ingressPath: /idauthentication/v1/kyc
     healthUrl: /idauthentication/v1/kyc/actuator/health
     podconfig: {{ podconfig.ida.kyc | to_yaml }}
+    hsmClientZipPath: {{ hsm_client_zip_path }}
 
   otp: 
     serviceName: {{ versions.services.ida.otp.keys()[0] }} 
@@ -60,10 +63,12 @@ services:
     ingressPath: /idauthentication/v1/otp
     healthUrl: /idauthentication/v1/otp/actuator/health
     podconfig: {{ podconfig.ida.kyc | to_yaml }}
+    hsmClientZipPath: {{ hsm_client_zip_path }}
 
 generators:
   keygen:  
     name: {{ versions.services.ida.keygen.keys()[0] }} 
     dockerImage: {{ versions.services.ida.keygen.values()[0] }}
-    hsmUrl: tcp://softhsm-ida:80   
+    hsmUrl: tcp://softhsm-ida:80
+    hsmClientZipPath: {{ hsm_client_zip_path }}
    
