--- a/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
@@ -5,7 +5,7 @@ springConfigLabel: {{ config_repo.version }}
 configServerUrl: {{ config_server.internal_url }}
 artifactoryUrl: {{ artifactory_url }} 
 iamAdapterUrl: {{ iam_adapter_url }}
-runtimeDepUrl: {{ runtimeDepUrl }}
+runtimeDepUrl: {{ runtimeDepUrlpath }}
 probe:
   initialDelay: 120  # Seconds
   period: 30 # Seconds
