Pesistence added in Grafana.  New version of grafana installed.

--- a/deployment/sandbox-v2/helm/charts/grafana/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/grafana/values.template.j2
@@ -13,3 +13,13 @@ ingress:
   # Explicitly disabling any hosts and default values.yml seems to have default host specified.
   hosts: []
   path: "/{{mon_prop.grafana_ingress_path}}"
+
+persistence:
+  type: pvc
+  enabled: true
+  storageClassName: {{nfs.provisioner}} 
+  accessModes:
+    - ReadWriteOnce
+  size: 1Gi
+
+
