[MOSIP-10389] added mock biosdk service

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -284,6 +284,10 @@ http {
            proxy_pass http://mzworker0.sb:30080/v1/mock-abis-service/;
         }
 
+        location /v1/biosdk-service/ {
+           proxy_pass http://mzworker0.sb:30080/v1/biosdk-service/;
+        }
+
         error_page 404 /404.html;
             location = /40x.html {
         }
