[MOSIP-10474]  Filebeat logging added for all MOSIP modules. Kibana dashboards updated, filter queries pre-loaded.

--- a/deployment/sandbox-v2/helm/charts/filebeat/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/filebeat/values.template.j2
@@ -9,7 +9,7 @@ filebeatConfig:
           templates:
             - condition:
                 equals:
-                  kubernetes.labels.component: kernel 
+                  kubernetes.labels.exportLogs: enabled
               config:
                 - type: container
                   paths:
