--- a/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
@@ -11,6 +11,7 @@ ingress:
 artifactoryUrl: {{ artifactory_url }} 
 imagePullPolicy: Always 
 isGlowroot: {{ is_glowroot }}
+exportLogs: enabled  # Let filebeat export the logs
 
 dockerHub:
   private: {{ docker_hub.private }}  
