--- a/deployment/sandbox-v2/helm/charts/datashare/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/datashare/values.template.j2
@@ -4,6 +4,8 @@ activeProfileEnv: mz
 springConfigLabel:  {{ config_repo.version }}
 configServerUrl: {{ config_server.internal_url }}
 artifactoryUrl: {{ artifactory_url }} 
+exportLogs: enabled  # Let filebeat export the logs
+
 probe:
   initialDelay: 30  # Seconds
   period: 30 # Seconds
