--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
@@ -4,6 +4,7 @@ activeProfileEnv: dmz
 springConfigLabel: {{ config_repo.version }} 
 configServerUrl: {{ config_server.ingress_url }}
 storageClass:  manual
+exportLogs: enabled  # Let filebeat export the logs
 
 probe:
   initialDelay: 30  # Seconds
