--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -4,6 +4,7 @@ activeProfileEnv: mz
 springConfigLabel: {{ config_repo.version }} 
 configServerUrl: {{ config_server.internal_url }}
 storageClass: dm-storage-class  # See sc, pv templates
+exportLogs: enabled  # Let filebeat export the logs
 
 sitePublicUrl: {{ site.sandbox_public_url }}
 probe:
