--- a/deployment/sandbox-v2/helm/charts/resident/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/resident/values.template.j2
@@ -3,6 +3,8 @@ part-of: mosip
 activeProfileEnv: mz 
 springConfigLabel: {{ config_repo.version }} 
 configServerUrl: {{ config_server.internal_url }}
+exportLogs: enabled  # Let filebeat export the logs
+
 ingress:
    namespace: default
 artifactoryUrl: {{ artifactory_url }} 
