[MOSIP-10450] Implementation of pod rolling updates

--- a/deployment/sandbox-v2/helm/charts/activemq/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/activemq/values.template.j2
@@ -9,3 +9,6 @@ docker:
   tempusage: 1 gb
   webPort: 8161
   servicePort: 80
+services:
+  activemq:
+    podconfig: {{ podconfig.activemq.service | to_yaml }}
