--- a/deployment/sandbox-v2/helm/charts/artifactory/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/artifactory/values.template.j2
@@ -4,3 +4,7 @@ docker:
   image: {{ versions.services.artifactory.service.values()[0] }}
   containerPort: 80
 imagePullPolicy: Always
+
+services:
+  artifactory:
+    podconfig: {{ podconfig.artifactory.service | to_yaml }}
