--- a/deployment/sandbox-v2/helm/charts/clamav/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/clamav/values.template.j2
@@ -3,3 +3,7 @@ docker:
   image: mkodockx/docker-clamav:latest
   containerPort: 3310
 imagePullPolicy: IfNotPresent
+
+services:
+  clamav:
+    podconfig: {{ podconfig.clamav.service | to_yaml }}
