--- a/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
@@ -37,3 +37,6 @@ localRepo:
     server: {{ nfs.server }}
     path: {{ config_repo.local_git_repo.path }} 
 
+services:
+  config_server:
+    podconfig: {{ podconfig.config_server.service | to_yaml }}
