--- a/deployment/sandbox-v2/helm/charts/resident/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/resident/values.template.j2
@@ -31,3 +31,4 @@ services:
     servicePort: 80
     ingressPath: /resident/v1
     healthUrl: /resident/v1/actuator/health
+    podconfig: {{ podconfig.resident.service | to_yaml }}
