--- a/deployment/sandbox-v2/helm/charts/websub/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/websub/values.template.j2
@@ -3,6 +3,8 @@ services:
   serviceName: {{ versions.services.websub.service.keys()[0] }}
   dockerImage: {{ versions.services.websub.service.values()[0] }}
   servicePort: 80
+  podconfig: {{ podconfig.websub.service | to_yaml }}
+
 component: websub
 
 imagePullPolicy: Always
