--- a/deployment/sandbox-v2/helm/charts/docker-secrets/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/docker-secrets/values.template.j2
@@ -1,2 +1,6 @@
 dockerConfigJson: ''  # base64 encoded. Passed directly from helm command
-name: {{ docker_hub.keyname }} 
+name: {{ docker_hub.keyname }}
+
+services:
+ docker-secrets:
+   podconfig: {{ podconfig.docker_service.service | to_yaml }} 
