--- a/deployment/sandbox-v2/helm/charts/print/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/print/values.template.j2
@@ -23,3 +23,4 @@ services:
     servicePort: 80
     ingressPath: /v1/print
     healthUrl: /v1/print/actuator/health
+    podconfig: {{ podconfig.print.service | to_yaml }}
