--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
@@ -14,7 +14,7 @@ ingress:
    namespace: default
 
 artifactoryUrl: {{ artifactory_url }} 
-iamAdapterUrl: {{ iam_adapter_url }}
+iamAdapterUrl: {{ iam_adapter_ext_url }}
 
 isGlowroot: {{ is_glowroot }} 
 
