--- a/deployment/sandbox-v2/helm/charts/admin/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/admin/values.template.j2
@@ -8,6 +8,8 @@ exportLogs: enabled  # Let filebeat export the logs
 ingress:
    namespace: default
 artifactoryUrl: {{ artifactory_url }} 
+iamAdapterUrl: {{ iam_adapter_url }}
+runtimeDepUrl: {{ runtimeDepUrlpath }}
 probe:
   initialDelay: 30  # Seconds
   period: 30 # Seconds
