[MOSIP-10832] Nginx conf corrected.

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -298,7 +298,7 @@ http {
 stream {
     server {
         listen {{postgres.port}};  
-        proxy_pass {{postgres.server}}:{{postgres.port}};
+        proxy_pass {{postgres.host}}:{{postgres.port}};
     }
 
     server {
