[MOSIP-10846] opened print  service access from outside in nginx

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -288,6 +288,10 @@ http {
            proxy_pass {{clusters.mz.ingress.base_url}}/v1/mosip-mock-service/;
         }
 
+        location /v1/print/ {
+           proxy_pass {{clusters.mz.ingress.base_url}}/v1/print/;
+        }
+
         error_page 404 /404.html;
             location = /40x.html {
         }
@@ -302,7 +306,7 @@ http {
 stream {
     server {
         listen {{postgres.port}};  
-        proxy_pass {{postgres.server}}:{{postgres.port}};
+        proxy_pass {{postgres.host}}:{{postgres.port}};
     }
 
     server {
