--- a/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
@@ -10,6 +10,7 @@ ingress:
 artifactoryUrl: {{ artifactory_url }} 
 sitePublicUrl: {{ site.sandbox_public_url }}
 iamAdapterUrl: {{ iam_adapter_url }}
+biosdkServiceUrl: {{ biosdk_service_url }}
 probe:
   initialDelay: 60  # Seconds
   period: 30 # Seconds
