MOSIP-10835 : Few configs changed in all.yml to allow vertx upgraded auth adaptor to be used for regproc stages

--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
@@ -16,7 +16,7 @@ ingress:
    namespace: default
 
 artifactoryUrl: {{ artifactory_url }} 
-iamAdapterUrl: {{ iam_adapter_ext_url }}
+iamAdapterUrl: {{ iam_adapter_regproc_ext_url }}
 
 isGlowroot: {{ is_glowroot }} 
 
