--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -15,7 +15,7 @@ ingress:
    namespace: default
 
 artifactoryUrl: {{ artifactory_url }} 
-iamAdapterUrl: {{ iam_adapter_url }}
+iamAdapterUrl: {{ iam_adapter_regproc_url }}
 
 imagePullPolicy: Always 
 
