--- a/deployment/sandbox-v2/helm/charts/websub/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/websub/values.template.j2
@@ -12,7 +12,7 @@ imagePullPolicy: Always
 domain: {{ sandbox_domain_name }}
 
 hub:
-  datasource_url: jdbc:postgresql://{{ sandbox_domain_name }}:30090/mosip_websub 
+  datasource_url: jdbc:postgresql://{{ postgres.host }}:{{ postgres.port }}/mosip_websub 
   datasource_username: websubuser
   datasource_password: {{secrets.postgres.dbadmin}}
   port: 9191
