Websub added in nginx conf.

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -292,6 +292,10 @@ http {
            proxy_pass {{clusters.mz.ingress.base_url}}/v1/print/;
         }
 
+        location /websub/ {
+           proxy_pass {{clusters.dmz.ingress.base_url}}/websub/;
+        }
+
         error_page 404 /404.html;
             location = /40x.html {
         }
