[MOSIP-10589] updating changes as per 1.1.4 release

--- a/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
@@ -6,6 +6,7 @@ configServerUrl: {{ config_server.internal_url }}
 artifactoryUrl: {{ artifactory_url }} 
 iamAdapterUrl: {{ iam_adapter_url }}
 runtimeDepUrl: {{ runtimeDepUrlpath }}
+cont_user: {{ container_user }}
 exportLogs: enabled  # Let filebeat export the logs
 probe:
   initialDelay: 120  # Seconds
