--- a/deployment/sandbox-v2/helm/charts/print/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/print/values.template.j2
@@ -4,6 +4,7 @@ activeProfileEnv: mz
 springConfigLabel:  {{ config_repo.version }}
 configServerUrl: {{ config_server.internal_url }}
 artifactoryUrl: {{ artifactory_url }} 
+iamAdapterUrl: {{ iam_adapter_url }}
 probe:
   initialDelay: 30  # Seconds
   period: 30 # Seconds
