--- a/deployment/sandbox-v2/helm/charts/resident/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/resident/values.template.j2
@@ -8,6 +8,7 @@ exportLogs: enabled  # Let filebeat export the logs
 ingress:
    namespace: default
 artifactoryUrl: {{ artifactory_url }} 
+iamAdapterUrl: {{ iam_adapter_url }}
 imagePullPolicy: Always
 
 sitePublicUrl: {{ site.sandbox_public_url }}
