--- a/deployment/sandbox-v2/helm/charts/websub/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/websub/values.template.j2
@@ -15,4 +15,8 @@ hub:
   datasource_url: jdbc:postgresql://{{ postgres.host }}:{{ postgres.port }}/mosip_websub 
   datasource_username: websubuser
   datasource_password: {{secrets.postgres.dbadmin}}
+  retry_count: 7
+  retry_interval: 1000
+  retry_backofffactor: 2.0
+  retry_maxwaitinterval: 65000
   port: 9191
