--- a/deployment/sandbox-v2/helm/charts/activemq/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/activemq/values.template.j2
@@ -1,6 +1,6 @@
 name: activemq
 docker:
-  image: mosipdev/activemq:5.15.9
+  image:  webcenter/activemq:latest
   containerPort: 61616
   nodeport: 30616
   min-memory: 512
