--- a/deployment/sandbox-v2/helm/charts/filebeat/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/filebeat/values.template.j2
@@ -38,6 +38,7 @@ filebeatConfig:
 
     logging.metrics.enabled: false
     setup.dashboards.enabled: true
+    monitoring.enabled: true
 
 # Extra environment variables to append to the DaemonSet pod spec.
 # This will be appended to the current 'env:' key. You can use any of the kubernetes env
