Activemq url bug fixed.

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -254,7 +254,7 @@ http {
         }
         # This is actually Activemq url. TODO: Change it to /activemq/admin
         location /admin/ {
-           proxy_pass {{clusters.mz.ingress.base_url}}/amdin/;
+           proxy_pass {{clusters.mz.ingress.base_url}}/admin/;
         }
 
         location /commons/v1/packetmanager/ {
