--- a/deployment/sandbox-v2/helm/charts/filebeat/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/filebeat/values.template.j2
@@ -14,28 +14,25 @@ filebeatConfig:
                 - type: container
                   paths:
                     - /var/log/containers/*-${data.kubernetes.container.id}.log
-                  json:
-                    keys_under_root: true
-                    overwrite_keys: true
+                  multiline:
+                    pattern: '^[[:space:]]+(at|\.{3})[[:space:]]+\b|^Caused by:'
+                    match: after
+    
     processors:
-      - drop_event:
-          when:
-            not:
-              has_fields: ["level_value"]
-      - drop_event:
-          when:
-            range:
-              level_value.lt: 20000
-
+      - decode_json_fields:
+          fields: ["message"]
+          target: ""
+          overwrite_keys: true
+    
     output.elasticsearch:
       host: '${NODE_NAME}'
       hosts: '${ELASTICSEARCH_HOSTS:{{mon_prop.elasticsearch.host}} }'
       indices:
         - index: "filebeat-test-%{[agent.version]}-%{+yyyy.MM.dd}"
-
+    
     setup.kibana:
-      host: "{{mon_prop.kibana.url}}" 
-
+      host: "{{mon_prop.kibana.url}}"
+    
     logging.metrics.enabled: false
     setup.dashboards.enabled: true
     monitoring.enabled: true
