--- a/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/idrepo/values.template.j2
@@ -20,8 +20,8 @@ imagePullPolicy: Always
 isGlowroot: {{ is_glowroot }} 
 
 dockerHub:
-  private: {{ docker_hub.private }}  
-  keyname: {{ docker_hub.keyname }}
+  private: {{ docker.hub.private }}  
+  keyname: {{ docker.hub.keyname }}
 
 extraction_format: mock
 
