[MOSIP-11568] Resource requests and limits added helm charts.

--- a/deployment/sandbox-v2/helm/charts/activemq/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/activemq/values.template.j2
@@ -11,7 +11,8 @@ docker:
   servicePort: 80
 services:
   activemq:
-    podconfig: {{ podconfig.activemq.service | to_yaml }}
+    podconfig:
+      {{ podconfig.activemq.service | to_nice_yaml(indent=6) | indent(6) }}
 
 adminPassword: '' # Defined diretly in helm command 
 
