--- a/deployment/sandbox-v2/helm/charts/admin/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/admin/values.template.j2
@@ -29,7 +29,8 @@ services:
     servicePort: 80
     ingressPath: /v1/admin
     healthUrl: /v1/admin/actuator/health
-    podconfig: {{ podconfig.admin.service | to_yaml }} 
+    podconfig:
+      {{ podconfig.admin.service | to_nice_yaml(indent=6) | indent(6) }}
 
   ui:
     serviceName: {{ versions.services.admin.ui.keys()[0] }}
