--- a/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
@@ -39,4 +39,6 @@ localRepo:
 
 services:
   config_server:
-    podconfig: {{ podconfig.config_server.service | to_yaml }}
+    podconfig:
+      {{ podconfig.config_server.service | to_nice_yaml(indent=6) | indent(6) }}
+
