--- a/deployment/sandbox-v2/helm/charts/mock-abis/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/mock-abis/values.template.j2
@@ -24,4 +24,5 @@ services:
     servicePort: 80
     ingressPath: /v1/mock-abis
     healthUrl: /v1/mock-abis-service/actuator/health
-    podconfig: {{ podconfig.mockabis.service | to_yaml }}
+    podconfig:
+      {{ podconfig.mockabis.service | to_nice_yaml(indent=6) | indent(6) }}
