--- a/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
@@ -26,4 +26,5 @@ services:
     servicePort: 80
     ingressPath: /commons/v1/packetmanager
     healthUrl: /commons/v1/packetmanager/actuator/health
-    podconfig: {{ podconfig.packetmanager.service | to_yaml }}
+    podconfig:
+      {{ podconfig.packetmanager.service | to_nice_yaml(indent=6) | indent(6) }}
