--- a/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
@@ -35,4 +35,5 @@ nodeAffinity:
 
 services:
   postgres:
-    podconfig: {{ podconfig.postgres.service | to_yaml }}
+    podconfig:
+      {{ podconfig.postgres.service | to_nice_yaml(indent=6) | indent(6) }}
