--- a/deployment/sandbox-v2/helm/charts/clamav/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/clamav/values.template.j2
@@ -6,7 +6,8 @@ imagePullPolicy: IfNotPresent
 
 services:
   clamav:
-    podconfig: {{ podconfig.clamav.service | to_yaml }}
+    podconfig:
+      {{ podconfig.clamav.service | to_nice_yaml(indent=6) | indent(6) }}
 
 exportLogs: enabled  # Let filebeat export the logs
 
