[MOSIP-11568] Resource requests and limits added helm charts.

--- a/deployment/sandbox-v2/helm/charts/datashare/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/datashare/values.template.j2
@@ -26,4 +26,5 @@ services:
     servicePort: 80
     ingressPath: /v1/datashare
     healthUrl: /v1/datashare/actuator/health
-    podconfig: {{ podconfig.datashare.service | to_yaml }}
+    podconfig:
+      {{ podconfig.datashare.service | to_nice_yaml(indent=6) | indent(6) }}
