--- a/deployment/sandbox-v2/helm/charts/print/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/print/values.template.j2
@@ -26,4 +26,5 @@ services:
     servicePort: 80
     ingressPath: /v1/print
     healthUrl: /v1/print/actuator/health
-    podconfig: {{ podconfig.print.service | to_yaml }}
+    podconfig:
+      {{ podconfig.print.service | to_nice_yaml(indent=6) | indent(6) }}
