--- a/deployment/sandbox-v2/helm/charts/resident/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/resident/values.template.j2
@@ -32,4 +32,5 @@ services:
     servicePort: 80
     ingressPath: /resident/v1
     healthUrl: /resident/v1/actuator/health
-    podconfig: {{ podconfig.resident.service | to_yaml }}
+    podconfig: 
+      {{ podconfig.resident.service | to_nice_yaml(indent=6) | indent(6) }}
