--- a/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
@@ -7,7 +7,7 @@ artifactoryUrl: {{ artifactory_url }}
 iamAdapterUrl: {{ iam_adapter_url }}
 exportLogs: enabled  # Let filebeat export the logs
 cache_provider: {{ cache_provider_url }}
-cacheConfigUrl: {{site.sandbox_public_url}}/config/*/mz/develop/hazelcast_cache.xml
+cacheConfigUrl: {{site.sandbox_public_url}}/config/*/mz/1.1.5/hazelcast_cache.xml
 
 probe:
   initialDelay: 30  # Seconds
