--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -27,8 +27,8 @@ dockerHub:
 
 services:
   camel:
-    serviceName: {{ versions.services.regproc.camel.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.camel.values()[0] }}
+    serviceName: regproc-camel-stage
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5723
       hazelcastPort: 5701
@@ -37,10 +37,11 @@ services:
     healthUrl: /registrationprocessor/v1/camelbridge/actuator/health
     podconfig:
       {{ podconfig.regproc.camel | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   notification:  # This is has a service front end for access (notification-svc.yaml)
-    serviceName: {{ versions.services.regproc.notification.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.notification.values()[0] }}
+    serviceName: regproc-securezone-notification-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5712
       hazelcastPort: 5701
@@ -50,10 +51,11 @@ services:
     healthUrl: /registrationprocessor/v1/securezone/actuator/health
     podconfig:
       {{ podconfig.regproc.notification | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   reprocess:
-    serviceName: {{ versions.services.regproc.reprocess.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.reprocess.values()[0] }}
+    serviceName: regproc-reprocessor-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5750
       hazelcastPort: 5701
@@ -62,10 +64,11 @@ services:
     healthUrl: /registrationprocessor/v1/reprocessor/actuator/health
     podconfig:
       {{ podconfig.regproc.reprocess | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   uploader:
-    serviceName: {{ versions.services.regproc.uploader.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.uploader.values()[0] }}
+    serviceName: regproc-packet-uploader-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5714
       hazelcastPort: 5701
@@ -74,10 +77,11 @@ services:
     healthUrl: /registrationprocessor/v1/uploader/actuator/health
     podconfig:
       {{ podconfig.regproc.uploader | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   quality:
-    serviceName: {{ versions.services.regproc.quality.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.quality.values()[0] }}
+    serviceName: regproc-quality-checker-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5727
       hazelcastPort: 5701
@@ -86,10 +90,11 @@ services:
     healthUrl: /registrationprocessor/v1/qualitychecker/actuator/health
     podconfig:
       {{ podconfig.regproc.quality | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   validator:
-    serviceName: {{ versions.services.regproc.validator.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.validator.values()[0] }}
+    serviceName: regproc-packet-validator-stage
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5715
       hazelcastPort: 5701
@@ -98,10 +103,11 @@ services:
     healthUrl: /registrationprocessor/v1/packetvalidator/actuator/health
     podconfig:
       {{ podconfig.regproc.validator | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   osi:
-    serviceName: {{ versions.services.regproc.osi.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.osi.values()[0] }}
+    serviceName: regproc-osi-validator-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5716
       hazelcastPort: 5701
@@ -110,10 +116,11 @@ services:
     healthUrl: /registrationprocessor/v1/osivalidator/actuator/health
     podconfig:
       {{ podconfig.regproc.osi | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   demo:
-    serviceName: {{ versions.services.regproc.demo.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.demo.values()[0] }}
+    serviceName: regproc-demo-dedupe-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5717
       hazelcastPort: 5701
@@ -122,10 +129,11 @@ services:
     healthUrl: /registrationprocessor/v1/demodedupe/actuator/health
     podconfig:
       {{ podconfig.regproc.demo | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   bio:
-    serviceName: {{ versions.services.regproc.bio.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.bio.values()[0] }}
+    serviceName: regproc-bio-dedupe-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5718
       hazelcastPort: 5701
@@ -134,10 +142,11 @@ services:
     healthUrl: /registrationprocessor/v1/biodedupe/actuator/health
     podconfig:
       {{ podconfig.regproc.bio | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   bioauth:
-    serviceName: {{ versions.services.regproc.bioauth.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.bioauth.values()[0] }}
+    serviceName: regproc-biometric-authentication-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5777
       hazelcastPort: 5701
@@ -146,10 +155,11 @@ services:
     healthUrl: /registrationprocessor/v1/bioauth/actuator/health
     podconfig:
       {{ podconfig.regproc.bioauth | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   abishandler:
-    serviceName: {{ versions.services.regproc.abishandler.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.abishandler.values()[0] }}
+    serviceName: regproc-abis-handler-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5726
       hazelcastPort: 5701
@@ -158,10 +168,11 @@ services:
     healthUrl: /registrationprocessor/v1/abishandler/actuator/health
     podconfig:
       {{ podconfig.regproc.abishandler | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   abismid:
-    serviceName: {{ versions.services.regproc.abismid.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.abismid.values()[0] }}
+    serviceName: regproc-abis-middleware-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5888
       hazelcastPort: 5701
@@ -170,10 +181,11 @@ services:
     healthUrl: /registrationprocessor/v1/abismiddleware/actuator/health
     podconfig:
       {{ podconfig.regproc.abismid | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   manual:
-    serviceName: {{ versions.services.regproc.manual.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.manual.values()[0] }}
+    serviceName: regproc-manual-verification-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5720
       hazelcastPort: 5701
@@ -183,10 +195,11 @@ services:
     healthUrl: /registrationprocessor/v1/manualverification/actuator/health
     podconfig:
       {{ podconfig.regproc.manual | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   external:
-    serviceName: {{ versions.services.regproc.external.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.external.values()[0] }}
+    serviceName: regproc-external-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5736
       hazelcastPort: 5701
@@ -195,10 +208,11 @@ services:
     healthUrl: /registrationprocessor/v1/external/actuator/health 
     podconfig:
       {{ podconfig.regproc.external | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   eis: 
-    serviceName: {{ versions.services.regproc.eis.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.eis.values()[0] }}
+    serviceName: regproc-external-integration-service 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       containerPort: 8201
       servicePort: 80
@@ -206,10 +220,11 @@ services:
     healthUrl: /registrationprocessor/v1/eis/actuator/health
     podconfig:
       {{ podconfig.regproc.eis | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   uin:
-    serviceName: {{ versions.services.regproc.uin.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.uin.values()[0] }}
+    serviceName: regproc-uin-generator-stage
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5719
       hazelcastPort: 5701
@@ -218,10 +233,11 @@ services:
     healthUrl: /registrationprocessor/v1/uin-generator/actuator/health
     podconfig:
       {{ podconfig.regproc.uin | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   msg:
-    serviceName: {{ versions.services.regproc.msg.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.msg.values()[0] }}
+    serviceName: regproc-message-sender-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5721
       hazelcastPort: 5701
@@ -230,10 +246,11 @@ services:
     healthUrl: /registrationprocessor/v1/sender-stage/actuator/health
     podconfig:
       {{ podconfig.regproc.msg | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   print:
-    serviceName: {{ versions.services.regproc.print.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.print.values()[0] }}
+    serviceName: regproc-printing-stage 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       eventbusPort: 5722
       hazelcastPort: 5701
@@ -242,10 +259,11 @@ services:
     healthUrl: /registrationprocessor/v1/print-stage/actuator/health
     podconfig:
       {{ podconfig.regproc.print | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
 
   trans:
-    serviceName: {{ versions.services.regproc.trans.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.trans.values()[0] }}
+    serviceName: regproc-registration-transaction-service 
+    dockerImage: {{ versions.services.regproc.vertex }}
     ports:
       containerPort: 8110
       servicePort: 80
@@ -253,3 +271,4 @@ services:
     healthUrl: /registrationprocessor/v1/registrationtransaction/actuator/health
     podconfig:
       {{ podconfig.regproc.trans | to_nice_yaml(indent=6) | indent(6) }}
+    jarUrl:
