--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -181,6 +181,10 @@ http {
            proxy_pass {{clusters.mz.ingress.base_url}}/registrationprocessor/v1/securezone/;
         }
 
+        location /registrationprocessor/v1/reprocessor/ {
+           proxy_pass {{clusters.mz.ingress.base_url}}/registrationprocessor/v1/reprocessor/;
+        }
+
         location /registrationprocessor/v1/manualverification/ {
            proxy_pass {{clusters.mz.ingress.base_url}}/registrationprocessor/v1/manualverification/;
         }
