--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -65,9 +65,9 @@ services:
     podconfig:
       {{ podconfig.regproc.postprocstagegroup | to_nice_yaml(indent=6) | indent(6) }}
 
-  notification:  
-    serviceName: {{ versions.services.regproc.preprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.preprocstagegroup.values()[0] }}
+  notification:  # This is has a service front end for access (notification-svc.yaml)
+    serviceName: {{ versions.services.regproc.notification.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.notification.values()[0] }}
     ports:
       eventbusPort: 5712
       hazelcastPort: 5701
@@ -77,8 +77,8 @@ services:
     healthUrl: /registrationprocessor/v1/securezone/actuator/health
 
   classifier:  
-    serviceName: {{ versions.services.regproc.preprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.preprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.classifier.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.classifier.values()[0] }}
     ports:
       eventbusPort: 5724
       hazelcastPort: 5701
@@ -87,8 +87,8 @@ services:
     healthUrl: /registrationprocessor/v1/packetclassifier/actuator/health
 
   reprocess:
-    serviceName: {{ versions.services.regproc.coreprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.coreprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.reprocess.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.reprocess.values()[0] }}
     ports:
       eventbusPort: 5750
       hazelcastPort: 5701
@@ -102,8 +102,8 @@ services:
     healthUrl: /registrationprocessor/v1/reprocessor/actuator/health
 
   uploader:
-    serviceName: {{ versions.services.regproc.preprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.preprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.uploader.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.uploader.values()[0] }}
     ports:
       eventbusPort: 5714
       hazelcastPort: 5701
@@ -112,8 +112,8 @@ services:
     healthUrl: /registrationprocessor/v1/uploader/actuator/health
 
   quality:
-    serviceName: {{ versions.services.regproc.preprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.preprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.quality.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.quality.values()[0] }}
     ports:
       eventbusPort: 5727
       hazelcastPort: 5701
@@ -122,8 +122,8 @@ services:
     healthUrl: /registrationprocessor/v1/qualitychecker/actuator/health
 
   validator:
-    serviceName: {{ versions.services.regproc.preprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.preprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.validator.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.validator.values()[0] }}
     ports:
       eventbusPort: 5715
       hazelcastPort: 5701
@@ -132,8 +132,8 @@ services:
     healthUrl: /registrationprocessor/v1/packetvalidator/actuator/health
 
   osi:
-    serviceName: {{ versions.services.regproc.preprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.preprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.osi.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.osi.values()[0] }}
     ports:
       eventbusPort: 5716
       hazelcastPort: 5701
@@ -142,8 +142,8 @@ services:
     healthUrl: /registrationprocessor/v1/osivalidator/actuator/health
 
   demo:
-    serviceName: {{ versions.services.regproc.coreprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.coreprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.demo.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.demo.values()[0] }}
     ports:
       eventbusPort: 5717
       hazelcastPort: 5701
@@ -152,8 +152,8 @@ services:
     healthUrl: /registrationprocessor/v1/demodedupe/actuator/health
 
   bio:
-    serviceName: {{ versions.services.regproc.coreprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.coreprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.bio.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.bio.values()[0] }}
     ports:
       eventbusPort: 5718
       hazelcastPort: 5701
@@ -162,8 +162,8 @@ services:
     healthUrl: /registrationprocessor/v1/biodedupe/actuator/health
 
   bioauth:
-    serviceName: {{ versions.services.regproc.coreprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.coreprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.bioauth.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.bioauth.values()[0] }}
     ports:
       eventbusPort: 5777
       hazelcastPort: 5701
@@ -172,8 +172,8 @@ services:
     healthUrl: /registrationprocessor/v1/bioauth/actuator/health
 
   abishandler:
-    serviceName: {{ versions.services.regproc.coreprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.coreprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.abishandler.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.abishandler.values()[0] }}
     ports:
       eventbusPort: 5726
       hazelcastPort: 5701
@@ -182,8 +182,8 @@ services:
     healthUrl: /registrationprocessor/v1/abishandler/actuator/health
 
   abismid:
-    serviceName: {{ versions.services.regproc.coreprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.coreprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.abismid.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.abismid.values()[0] }}
     ports:
       eventbusPort: 5888
       hazelcastPort: 5701
@@ -192,8 +192,8 @@ services:
     healthUrl: /registrationprocessor/v1/abismiddleware/actuator/health
 
   manual:
-    serviceName: {{ versions.services.regproc.coreprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.coreprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.manual.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.manual.values()[0] }}
     ports:
       eventbusPort: 5720
       hazelcastPort: 5701
@@ -203,8 +203,8 @@ services:
     healthUrl: /registrationprocessor/v1/manualverification/actuator/health
 
   external:
-    serviceName: {{ versions.services.regproc.coreprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.coreprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.external.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.external.values()[0] }}
     ports:
       eventbusPort: 5736
       hazelcastPort: 5701
@@ -224,8 +224,8 @@ services:
       {{ podconfig.regproc.eis | to_nice_yaml(indent=6) | indent(6) }}
 
   uin:
-    serviceName: {{ versions.services.regproc.coreprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.coreprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.uin.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.uin.values()[0] }}
     ports:
       eventbusPort: 5719
       hazelcastPort: 5701
@@ -234,8 +234,8 @@ services:
     healthUrl: /registrationprocessor/v1/uin-generator/actuator/health
 
   msg:
-    serviceName: {{ versions.services.regproc.postprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.postprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.msg.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.msg.values()[0] }}
     ports:
       eventbusPort: 5721
       hazelcastPort: 5701
@@ -244,8 +244,8 @@ services:
     healthUrl: /registrationprocessor/v1/sender-stage/actuator/health
 
   print:
-    serviceName: {{ versions.services.regproc.postprocstagegroup.keys()[0] }} 
-    dockerImage: {{ versions.services.regproc.postprocstagegroup.values()[0] }}
+    serviceName: {{ versions.services.regproc.print.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.print.values()[0] }}
     ports:
       eventbusPort: 5722
       hazelcastPort: 5701
