--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -258,3 +258,14 @@ services:
     healthUrl: /registrationprocessor/v1/registrationtransaction/actuator/health
     podconfig:
       {{ podconfig.regproc.trans | to_nice_yaml(indent=6) | indent(6) }}
+
+  notificationService:  # This is has a service front end for access (notification-service-svc.yaml)
+    serviceName: {{ versions.services.regproc.notificationService.keys()[0] }} 
+    dockerImage: {{ versions.services.regproc.notificationService.values()[0] }}
+    ports:
+      containerPort: 8088
+      servicePort: 80 
+    ingressPath: /registrationprocessor/v1/notification/
+    healthUrl: /registrationprocessor/v1/notification/actuator/health
+    podconfig:
+      {{ podconfig.regproc.notificationService | to_nice_yaml(indent=6) | indent(6) }}
