--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -205,6 +205,26 @@ http {
            proxy_pass {{clusters.mz.ingress.base_url}}/registrationprocessor/v1/bio-dedupe/;
         }
 
+        location /registrationprocessor/v1/notification/ {
+           proxy_pass {{clusters.mz.ingress.base_url}}/registrationprocessor/v1/notification/;
+        }
+
+        location /partnermanagement/v1/misps/ {
+           proxy_pass {{clusters.mz.ingress.base_url}}/partnermanagement/v1/misps/;
+        }
+
+        location /partnermanagement/v1/policies/ {
+           proxy_pass {{clusters.mz.ingress.base_url}}/partnermanagement/v1/policies/;
+        }
+
+        location /partnermanagement/v1/partners/ {
+           proxy_pass {{clusters.mz.ingress.base_url}}/partnermanagement/v1/partners/;
+        }
+
+        location /partnermanagement/v1/pmpartners/ {
+           proxy_pass {{clusters.mz.ingress.base_url}}/partnermanagement/v1/pmpartners/;
+        }
+
         location /pmp-ui/ {
           proxy_pass {{clusters.mz.ingress.base_url}}/pmp-ui/;
         }
