MOSIP-11634 : Infra changes required to form the hazelcast cluster in packetmanager

--- a/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/values.template.j2
@@ -24,7 +24,9 @@ services:
   packet:
     serviceName: {{ versions.services.packetmanager.service.keys()[0] }}
     dockerImage: {{ versions.services.packetmanager.service.values()[0] }}
-    containerPort: 8093
+    ports:
+      containerPort: 8093
+      hazelcastPort: 5701
     servicePort: 80
     ingressPath: /commons/v1/packetmanager
     healthUrl: /commons/v1/packetmanager/actuator/health
